--- a/package.json
+++ b/package.json
@@ -18,5 +18,6 @@
     "GDML"
   ],
   "author": "Roy",
+  "repository": {"type": "git", "url": "https://github.com/XMZOVO/threejs_gdml_loader"},
   "license": "ISC"
 }
